fix(tomcat-suite): complete the Windows classpath; retire the BouncyCastle + EasyMock fixture-gap docs
`apps\tomcat\.suite\cp.txt` was short by four jars, so eleven Tomcat test
classes reported `NoClassDefFoundError` and were filed as two separate
known-issues docs that read like CratonVM regressions.

Root cause: `Build-Classpath` resolved each jar by ONE file-name pattern --
the name Tomcat's `ant download-compile` renames it to
(`bouncycastle-provider-1.84.jar`). `$LIB` (`~/tomcat-build-libs`) does not
exist on this box, leaving only the Gradle module cache, which stores the
upstream Maven names (`bcprov-jdk18on-1.84.jar`). Nothing matched, the miss
was a `Write-Warning` that scrolled past, and the entry was silently filtered
out of the classpath.

run-tomcat-suite.ps1 (newly tracked -- it had never been git-added):
  * every jar is looked up by a LIST of patterns, renamed name then Maven name
  * roots extended with `~\.m2\repository` and a `.suite\lib` drop box
  * a miss is now fatal: printed in red with the roots searched, written to
    `.suite\cp-missing.txt`, and `Die` unless `-AllowMissingLibs` is passed
  * new `-RefreshClasspath` rebuilds `cp.txt` + `all-tests.txt` in seconds
    without the ~20 min `ant deploy && ant test-compile`

run-one.ps1 -- two defects found while re-running the affected classes:
  * it passed NONE of the suite's JVM args despite claiming "exactly the
    suite's environment"; without `--add-opens=java.base/java.lang` every
    EasyMock-based class fails for reasons unrelated to the VM. `$argv` is
    now a copy of `Invoke-Mode`'s `$jvmArgs`.
  * its exit code was ALWAYS 0: `Start-Process -PassThru` yields a `Process`
    whose `.ExitCode` reads back `$null` unless `.Handle` was touched first,
    so it printed `rc=` and ran `exit $null`. Every driver that trusted it
    scored failing classes as PASS.

Verification (`cratonvm-bccp-20260803.exe`, release off dev 36f1157ad, one
process per class, status from the JUnit banner not t